--- a/Menu_GreenF.html
+++ b/Menu_GreenF.html
@@ -145,7 +145,7 @@
             margin-bottom: 10px;
             /* 단락간 간격 조절 */
         }
-         section h3{
+        section h3{
             margin-bottom: 5px;
         }
         #detail-wrap {
@@ -204,7 +204,7 @@
             <div id="detail-container-little">
             <section>
                     <span>
-                        <img src="public/images/big_Size_GreenTeaF.png"></img>
+                        <img src="public/images/grtf.jpg"></img>
                         <h1>그린티 프라푸치노</h1>
                         <button id="add_btn" onclick="addToCart('그린티 프라푸치노')">Add Cart</button>
                         <button id="buy_btn" onclick="buyNow('그린티 프라푸치노')">Buy</button>
